--- a/project/res/layout/fragment_tablet_checkout_controller.xml
+++ b/project/res/layout/fragment_tablet_checkout_controller.xml
@@ -6,59 +6,64 @@
     android:baselineAligned="false"
     android:orientation="horizontal" >
 
-    <LinearLayout
-        android:id="@+id/trip_bucket_container"
+    <ScrollView
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="#242C2E"
-        android:orientation="vertical"
-        android:paddingBottom="8dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
-        android:paddingTop="8dp" >
+        android:layout_weight="1" >
 
         <LinearLayout
-            android:id="@+id/trip_bucket_header_container"
+            android:id="@+id/trip_bucket_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingBottom="16dp"
-            android:paddingTop="16dp" >
+            android:layout_height="match_parent"
+            android:background="#242C2E"
+            android:orientation="vertical"
+            android:paddingBottom="8dp"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
+            android:paddingTop="8dp" >
 
-            <TextView
-                android:id="@+id/your_trip_tv"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/trip_bucket_header_container"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:text="@string/your_trip"
-                android:textColor="#FFFFFF"
-                android:textSize="18dp" />
+                android:orientation="horizontal"
+                android:paddingBottom="16dp"
+                android:paddingTop="16dp" >
 
-            <TextView
-                android:id="@+id/trip_date_range"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/your_trip_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="@string/your_trip"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18dp" />
+
+                <TextView
+                    android:id="@+id/trip_date_range"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:gravity="center_vertical"
+                    android:text=""
+                    android:textColor="#FFFFFF"
+                    android:textSize="18dp" />
+            </LinearLayout>
+
+            <FrameLayout
+                android:id="@+id/bucket_hotel_frag_container"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:gravity="center_vertical"
-                android:text=""
-                android:textColor="#FFFFFF"
-                android:textSize="18dp" />
+                android:layout_marginTop="16dp" />
+
+            <FrameLayout
+                android:id="@+id/bucket_flight_frag_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp" />
         </LinearLayout>
-
-        <FrameLayout
-            android:id="@+id/bucket_hotel_frag_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp" />
-
-        <FrameLayout
-            android:id="@+id/bucket_flight_frag_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp" />
-    </LinearLayout>
+    </ScrollView>
 
     <FrameLayout
         android:id="@+id/checkout_forms_container"
