--- a/project/res/values-hdpi/dimens.xml
+++ b/project/res/values-hdpi/dimens.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<!-- These are slight differences between hdpi and mpdi positioning -->	
-	<dimen name="min_height_rating_bar_small">16dp</dimen>
+
+    <!-- These are slight differences between hdpi and mpdi positioning -->
+    <dimen name="min_height_rating_bar_small">16dp</dimen>
     <dimen name="max_height_rating_bar_small">16dp</dimen>
-    
-	<dimen name="margin_top_sale_ribbon_room_rates">25dp</dimen>
+    <dimen name="margin_top_sale_ribbon_room_rates">25dp</dimen>
+
+    <!-- Tablet trip bucket dimens -->
+    <dimen name="tablet_tripbucket_card_height">120dp</dimen>
+    <dimen name="tablet_tripbucket_card_width">352dp</dimen>
+    <dimen name="tripbucket_bookbutton_height">35dp</dimen>
+    <dimen name="trip_bucket_item_horizontal_margin">32dp</dimen>
+    <dimen name="trip_bucket_swipe_out_distance">48dp</dimen>
+    <dimen name="trip_bucket_swipe_out_distance_half">24dp</dimen>
+    <dimen name="trip_bucket_primary_dest_size">46sp</dimen>
+    <dimen name="trip_bucket_root_layout_padding_top">80dp</dimen>
+    <dimen name="trip_bucket_empty_trip_container_padding_top">-40dp</dimen>
+    <dimen name="trip_bucket_suitcase_image_padding_top">100dp</dimen>
 
 </resources>
