1822: Added discount and VIP badge to hotel details fragment

--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -45,6 +45,42 @@
                             android:scaleType="centerCrop"
                             android:src="?attr/hotelImagePlaceHolderDrawable" />
 
+                        <!-- VIP badge -->
+
+                        <TextView
+                            android:id="@+id/vip_badge"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="top|left"
+                            android:layout_marginLeft="12dp"
+                            android:layout_marginTop="12dp"
+                            android:background="@drawable/bg_vip_badge"
+                            android:paddingBottom="1dp"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+                            android:paddingTop="1dp"
+                            android:text="@string/VIP"
+                            android:textColor="@android:color/white"
+                            android:visibility="gone" />
+
+                        <!-- Sale/discount rate -->
+
+                        <TextView
+                            android:id="@+id/sale_text_view"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="top|right"
+                            android:layout_marginRight="12dp"
+                            android:layout_marginTop="12dp"
+                            android:background="@drawable/bg_sale_text_view"
+                            android:paddingBottom="1dp"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+                            android:paddingTop="1dp"
+                            android:singleLine="true"
+                            android:textColor="@android:color/white"
+                            android:visibility="gone" />
+
                         <!-- Hotel header section (#2058) -->
 
                         <RelativeLayout
