--- a/project/res/layout/fragment_tablet_checkout_payment_form.xml
+++ b/project/res/layout/fragment_tablet_checkout_payment_form.xml
@@ -40,6 +40,10 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bg_checkout_information_middle_tab"
         android:padding="24dp" >
+
+        <include
+            android:id="@+id/payment_info"
+            layout="@layout/section_edit_creditcard" />
     </FrameLayout>
 
 </LinearLayout>
