--- a/project/res/layout/fragment_tvly_launch.xml
+++ b/project/res/layout/fragment_tvly_launch.xml
@@ -10,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize" />
 
-
     <LinearLayout
         android:id="@+id/error_container"
         android:layout_width="match_parent"
@@ -26,7 +25,6 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_no_connection" />
 
-
         <TextView
             android:id="@+id/error_message_text_view"
             android:layout_width="wrap_content"
@@ -35,10 +33,10 @@
             android:gravity="center"
             android:text="@string/error_launch_connection"
             android:textColor="@color/roboto_light"
-            android:textSize="17dp"
-            android:onClick=""/>
+            android:textSize="17dp" />
+
     </LinearLayout>
-    
+
     <RelativeLayout
         android:id="@+id/scroll_container"
         android:layout_width="match_parent"
@@ -51,7 +49,7 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:background="@drawable/bg_launch_london"
-            android:layout_alignParentStart="false"/>
+            android:layout_alignParentStart="false" />
 
         <View
             android:id="@+id/content_shadow"
@@ -68,13 +66,15 @@
 
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
+            android:layout_alignParentEnd="true" />
+
         <ImageView
             android:id="@+id/tvly_hotels"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_tvly_hotels"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentBottom="true" />
+
     </RelativeLayout>
 
 </LinearLayout>
