--- a/project/res/layout/fragment_tablet_checkout_controller.xml
+++ b/project/res/layout/fragment_tablet_checkout_controller.xml
@@ -2,13 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="#454235" >
 
     <FrameLayout
         android:id="@+id/cvv_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#00FF00" />
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:id="@+id/checkout_mode_root"
@@ -89,8 +89,7 @@
                 android:id="@+id/checkout_forms_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#454235" />
+                android:layout_weight="1" />
 
             <FrameLayout
                 android:id="@+id/finish_checkout_container"
