Adding default map pins (green) for Travelocity
Not changing the name as it is directly accessed as Drawable in code.
The sale pin remains red as for Expedia App.

Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D66

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -230,6 +230,7 @@
     <!-- HotelCheckout Traveler Info screen after logged in, Logo to the left of the primary traveler -->
     <attr name="hotelPrimaryTravelerInfoLogoDrawable" format="reference" />
     <attr name="hotelListMapMarkerSaleDrawable" format="reference" />
+    <attr name="hotelListMapMarkerDrawable" format="reference" />
 
     <attr name="ccCheckoutHologramDrawable" format="reference" />
 
