--- a/project/res/color/sliding_group_text.xml
+++ b/project/res/color/sliding_group_text.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#f4f5f7" android:state_checked="true" />
-    <item android:color="#f4f5f7" android:state_selected="true" />
-    <item android:color="#f4f5f7" android:state_pressed="true" />
-    <item android:color="#4a4f54" />
+    <item android:color="@color/sliding_group_text_bright" android:state_checked="true" />
+    <item android:color="@color/sliding_group_text_bright" android:state_selected="true" />
+    <item android:color="@color/sliding_group_text_bright" android:state_pressed="true" />
+    <item android:color="@color/sliding_group_text_dim" />
 </selector>
