--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -166,6 +166,8 @@
     <color name="details_ring_blue">#286cb5</color>
     <color name="details_ring_gray">#cbcfd2</color>
     <color name="details_ring_text">#4b556b</color>
+    <color name="sliding_group_text_bright">#f4f5f7</color>
+    <color name="sliding_group_text_dim">#4a4f54</color>
 
     <!-- Tablet flights -->
     <color name="tablet_flight_filter_text_color">#4c5156</color>
