--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -13,6 +13,7 @@
 
     <!-- Tablet results -->
     <dimen name="checkbox_filter_widget_padding_left">38dp</dimen>
+    <dimen name="sliding_filter_row_height">44dp</dimen>
 
     <!-- Flights -->
     <dimen name="tablet_filter_white_space">32dp</dimen>
