--- a/project/res/layout/row_tablet_room_rate.xml
+++ b/project/res/layout/row_tablet_room_rate.xml
@@ -58,12 +58,15 @@
 
         <TextView
             android:id="@+id/new_room_rate"
-            android:layout_width="48dp"
+            android:layout_width="wrap_content"
             android:layout_height="22dp"
             android:background="#245fb3"
             android:gravity="center"
             android:textColor="#ffffff"
             android:textSize="14sp"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            android:minWidth="48dp"
             android:textStyle="bold" />
     </FrameLayout>
 
