--- a/project/res/layout/fragment_tablet_checkout_data_form.xml
+++ b/project/res/layout/fragment_tablet_checkout_data_form.xml
@@ -34,12 +34,12 @@
             android:textSize="18dp" />
     </LinearLayout>
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/content_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_checkout_information_middle_tab"
-        android:padding="24dp" >
-    </FrameLayout>
+        android:orientation="vertical"
+        android:padding="24dp" />
 
 </LinearLayout>
