--- a/project/res/layout/fragment_tvly_launch.xml
+++ b/project/res/layout/fragment_tvly_launch.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical" >
 
     <!-- ActionBar spacer -->
 
@@ -48,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:background="@drawable/bg_launch_london"
+            android:background="@drawable/bg_launch_sf_placeholder"
             android:layout_alignParentStart="false" />
 
         <View
@@ -58,23 +58,41 @@
             android:layout_alignParentTop="true"
             android:background="@drawable/launch_content_top_shadow" />
 
-        <ImageView
-            android:id="@+id/tvly_flights"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/btn_tvly_flights"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:paddingTop="50dp">
 
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            <ImageView
+                android:id="@+id/tvly_home_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/icon_home_tvly"
+                android:layout_gravity="top"/>
 
-        <ImageView
-            android:id="@+id/tvly_hotels"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/btn_tvly_hotels"
-            android:layout_alignParentBottom="true" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:paddingBottom="50dp">
 
+            <ImageView
+                android:id="@+id/tvly_flights"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_tvly_flights"
+                android:layout_gravity="bottom"/>
+
+            <ImageView
+                android:id="@+id/tvly_hotels"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_tvly_hotels"
+                android:layout_gravity="bottom"/>
+
+        </LinearLayout>
     </RelativeLayout>
 
 </LinearLayout>
