Update overflow/homeAsUp on tablet checkout

--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -82,6 +82,8 @@
     <style name="V2.Theme.Activity.TabletCheckout" tools:targetApi="14">
         <item name="android:windowActionBarOverlay">false</item>
         <item name="android:actionBarStyle">@style/V2.Widget.ActionBar.TabletCheckout</item>
+        <item name="android:homeAsUpIndicator">@drawable/abs__ic_ab_back_holo_light</item>
+        <item name="android:actionOverflowButtonStyle">@style/Widget.Sherlock.Light.ActionButton.Overflow</item>
     </style>
 
     <!-- Action bar styling; directly linked to themes so not moving too far away -->
