193: Add placeholder for search param button backgrounds
As per the Rajan's comment on story #193, I found out that the spinner
was using a translucent image. Which is causing the issue. I have
created this boilerplate code so that when the new image arrives we can
just put that image in the resource folder.

Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D72

Conflicts:
	project/res_travelocity/values/themes.xml

--- a/project/res/layout/actionbar_search_hotels.xml
+++ b/project/res/layout/actionbar_search_hotels.xml
@@ -46,7 +46,7 @@
             android:layout_width="@dimen/actionbar_refinement_width"
             android:layout_height="fill_parent"
             android:layout_gravity="center_vertical"
-            android:background="@drawable/ab_spinner"
+            android:background="?attr/actionBarSpinnerBackground"
             android:padding="0dp"
             android:src="@drawable/ic_menu_guests" />
 
@@ -79,7 +79,7 @@
             android:layout_height="fill_parent"
             android:layout_gravity="center_vertical"
             android:layout_margin="0dp"
-            android:background="@drawable/ab_spinner"
+            android:background="?attr/actionBarSpinnerBackground"
             android:padding="0dp"
             android:src="@drawable/ic_menu_date" />
 
