--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -162,6 +162,8 @@
     <!-- ActionBar icon/logo in HotelRulesActivities -->
     <attr name="hotelwebViewActionBarLogo" format="reference" />
 
+    <attr name="actionBarSpinnerBackground" format="reference" />
+
     <attr name="actionBarBackgroundDrawable" format="reference" />
     <!-- ActionBar checkmark drawable -->
     <attr name="actionBarCheckMarkDrawable" format="reference" />
