--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -22,7 +22,6 @@
         <item name="android:actionOverflowButtonStyle">@style/Widget.Sherlock.Light.ActionButton.Overflow</item>
         <item name="homeAsUpIndicator">@drawable/abs__ic_ab_back_holo_light</item>
         <item name="android:homeAsUpIndicator">@drawable/abs__ic_ab_back_holo_light</item>
-
         <!-- NumberPicker styles -->
         <item name="numberPickerUpButtonStyle">@style/Widget.ImageButton.NumberPickerUpButton</item>
         <item name="numberPickerDownButtonStyle">@style/Widget.ImageButton.NumberPickerDownButton</item>
@@ -157,7 +156,7 @@
         <item name="simpleNumberPickerUpButtonStyle">@style/NumberPickerButton.Up</item>
         <item name="android:logo">@drawable/ic_logo_hotels</item>
         <item name="logo">@drawable/ic_logo_hotels</item>
-
+        <item name="actionBarSpinnerBackground">@drawable/ab_spinner</item>
         <!-- Custom attrs for Expedia/VSC switching -->
         <item name="hotelPriceStandardColor">@color/hotel_price_text_color</item>
         <item name="hotelPriceSaleColor">@color/hotel_price_sale_text_color</item>
