191: Skinning Book Now button for TVLY
Changing Book Now button color to blue. Also changed text from 'Book
Now' to 'Book'. Will replace the shapes with 9 PNGs once available.

Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D70

--- a/project/res/layout-land/hotel_details_main.xml
+++ b/project/res/layout-land/hotel_details_main.xml
@@ -68,7 +68,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?attr/loginBookNowButtonDrawable"
-                        android:text="@string/book_now"
+                        android:text="?attr/hotelBookButtonString"
                         android:textSize="18sp" />
 
                     <Button
