--- a/project/res/layout/activity_tablet_checkout.xml
+++ b/project/res/layout/activity_tablet_checkout.xml
@@ -2,12 +2,4 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-    <fragment
-        android:id="@+id/tablet_checkout_controller_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        class="com.expedia.bookings.fragment.TabletCheckoutControllerFragment" />
-
-</FrameLayout>
+    android:layout_height="match_parent" />
