--- a/project/res/layout/fragment_tablet_checkout_data_form.xml
+++ b/project/res/layout/fragment_tablet_checkout_data_form.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:layout_marginTop="16dp"
               android:orientation="vertical">
 
     <LinearLayout
@@ -10,26 +11,31 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        android:background="#FFFFFF"
         android:padding="16dp">
+
+        <TextView
+            android:id="@+id/header_text_button_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="@string/done"
+            android:textStyle="bold"
+            android:textSize="18dp"/>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@color/divider_grey"/>
 
         <TextView
             android:id="@+id/header_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:gravity="center_vertical"
             android:text="@string/traveler_num_and_category_TEMPLATE"
-            android:textColor="#FFFFFF"
-            android:textSize="18dp"/>
-
-        <TextView
-            android:id="@+id/top_right_text_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:gravity="center_vertical"
-            android:text="@string/done"
-            android:textColor="#FFFFFF"
             android:textSize="18dp"/>
     </LinearLayout>
 
