Fixed possible API level issue

--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -24,6 +24,7 @@
     <!-- Tablet details -->
     <dimen name="tablet_detail_padding">24dp</dimen>
     <dimen name="non_refundable_tweak">0dp</dimen>
+    <dimen name="add_rate_button_min_width">48dp</dimen>
 
     <!-- Tablet checkout -->
     <dimen name="trip_bucket_expanded_card_padding">2dp</dimen>
