--- a/project/res/layout/row_tablet_room_rate.xml
+++ b/project/res/layout/row_tablet_room_rate.xml
@@ -48,7 +48,8 @@
         android:id="@+id/rate_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical" >
+        android:layout_gravity="center_vertical"
+        android:visibility="invisible">
 
         <ImageView
             android:id="@+id/image_checkmark"
@@ -67,7 +68,7 @@
             android:textSize="14sp"
             android:paddingLeft="4dp"
             android:paddingRight="4dp"
-            android:minWidth="48dp"
+            android:minWidth="@dimen/add_rate_button_min_width"
             android:textStyle="bold" />
     </FrameLayout>
 
