175: Changing color of calendar cells Flights & Hotels
Summary:
When the start & end date are selected, then selected dates are shown with blue color for
both hotel & flight search. To override Expedia `FlightTheme` I have copied entire parent theme
config to Travelocity `themes.xml`.

Using custom *.9.png files for now, have raised a request for specific images. Will replace
images once we receive them.

Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D78

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -181,6 +181,12 @@
     <attr name="calendarDatePickerPopupDrawable" format="reference" />
     <attr name="calendarDatePickerDateFormat" format="reference|string" />
 
+
+    <!--Flight Calendar related styling -->
+    <attr name="flightCalendarDatePickerCellDrawable" format="reference" />
+    <attr name="flightCalendarDatePickerPopupDrawable" format="reference" />
+
+
     <attr name="hotelCancellationPolicyDateFormat" format="reference|string" />
 
     <!-- Hotel promo pricing related styling -->
